Use 400 weight font, not 300, to fix readability

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,7 @@
 /* Bulma overrides */
 $body-size: 18px;
+$weight-light: 400;
+$weight-normal: 400;
 $family-sans-serif: "Source Sans Pro", BlinkMacSystemFont, -apple-system, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", "Helvetica", "Arial", sans-serif;
